[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/Creature_Option/scripts/CreatureNameButton.gd" type="Script" id=1]
[ext_resource path="res://Interactions/ButtonStyles/DefaultButton.tres" type="StyleBox" id=2]
[ext_resource path="res://Interactions/ButtonStyles/disabledButton.tres" type="StyleBox" id=3]
[ext_resource path="res://Interactions/ButtonStyles/HoverButton.tres" type="StyleBox" id=4]
[ext_resource path="res://Interactions/ButtonStyles/PressedButton.tres" type="StyleBox" id=5]
[ext_resource path="res://import/googleFonts/Poppins/Poppins-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://import/googleFonts/Poppins/Poppins-ExtraBold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 7 )

[node name="CreatureNameButton" type="Button"]
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "Creature.name"
expand_icon = true
script = ExtResource( 1 )

[node name="UserInput" type="LineEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_styles/read_only = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
align = 1
max_length = 18
caret_blink = true

[connection signal="pressed" from="." to="." method="_on_CreatureNameButton_pressed"]
[connection signal="focus_exited" from="UserInput" to="." method="_on_UserInput_focus_exited"]
[connection signal="text_entered" from="UserInput" to="." method="_on_UserInput_text_entered"]
